# gliner2-rs

./: .gitignore  Cargo.toml  README.md  README_HF.md  RELEASE_NOTES.md  export_for_qualcomm.sh  plan_iobinding.md
benchmarks/: benchmark_python.py  run_all_benchmarks.sh
docs_and_plans/: README.md
examples/: run_inference.rs
onnx_conversion_scripts/: 06_export_base_multi_v1.py  compare_span_mapping.py  debug_span_boundaries.py  debug_span_embeddings.py  debug_span_extraction.py  export_gliner2_onnx.py  identify_rust_model_issue.py  test_finetuned_comparison.py  upload_v2_to_hf.py
onnx_conversion_scripts/archive_debug_scripts/: analyze_python_gliner_logic.py  analyze_span_mapping.py  debug_english_issue.py  debug_span_extraction_fixed.py  debug_tensor_mismatch.py  implement_word_level_spans.py  investigate_pytorch_span_generation.py  python_vs_rust_comparison.json  test_eps.rs  test_inputs.rs  test_python_comparison.py  verify_onnx_conversion.py
rust_component/: Cargo.toml
rust_component/examples/: run_inference.rs  test_benchmark.rs  test_benchmark_v2.rs  test_hf_download.rs  test_simple.rs
rust_component/src/: lib.rs  lib_v2.rs  processor.rs
src/: lib.rs  processor.rs
