[package]
name = "gliner2_inference"
version = "0.3.2"
edition = "2021"
authors = ["Dario Finardi <git@semplifica.ai>", "Semplifica s.r.l."]
description = "Native Rust inference engine for GLiNER2 models using ONNX Runtime."
license = "Apache-2.0"
repository = "https://github.com/SemplificaAI/gliner2-rs"

[dependencies]
# Manipolazione Tensor (L'equivalente NumPy per Rust)
ndarray = "0.16.1"

# Binding ufficiale Rust per ONNX Runtime (versione moderna)
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "qnn", "cuda", "rocm", "coreml", "openvino", "directml", "tensorrt", "xnnpack", "half"] }

# Tokenizer HuggingFace puro Rust (velocissimo, zero overhead Python)
tokenizers = "0.19.1"

# Gestione base errori ed I/O
anyhow = "1.0"
half = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
hf-hub = "0.5.0"
